use_undefined_identifier/c3/calc_attackers
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/calc_attackers/src/attacks.c:561:12: error: use of undeclared identifier 'dword_66859C'
for ( m = &dword_66859C[v37]; v38 == 13; --m ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/calc_attackers/src/attacks.c:629:13: error: use of undeclared identifier 'dword_66859C'
for ( i2 = &dword_66859C[v15]; v16 == 13; --i2 ) 
            ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/calc_attackers/src/obj/attacks.o] Error 1
